--- a/admin/package.json
+++ b/admin/package.json
@@ -14,9 +14,11 @@
     "@tiptap/pm": "^2.1.13",
     "@tiptap/react": "^2.1.13",
     "@tiptap/starter-kit": "^2.1.13",
+    "ace-builds": "^1.43.6",
     "lucide-react": "^0.294.0",
     "pluralize": "^8.0.0",
     "react": "^18.2.0",
+    "react-ace": "^14.0.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
     "sonner": "^1.4.0"
