--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "pluralize": "^8.0.0",
     "pm2": "^6.0.14",
     "prisma": "^6.19.2",
+    "resend": "^6.9.2",
     "slugify": "^1.6.6",
     "uuid": "^9.0.1",
     "vite": "^7.3.1"
