--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "devDependencies": {
     "concurrently": "^8.2.2",
     "nodemon": "^3.0.2",
+    "puppeteer": "^24.37.5",
     "supertest": "^6.3.4",
     "vitest": "^1.6.1"
   }
