--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.19.2",
+    "adm-zip": "^0.5.16",
     "axios": "^1.13.4",
     "bcryptjs": "^2.4.3",
     "cheerio": "^1.2.0",
