--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,13 @@ uploads/*
 admin/dist/
 *.log
 .DS_Store
+.npm/
+.pm2/
+.pki/
+.nvm/
+.windsurf-server/
+.sudo_as_admin_successful
+.viminfo
 
 /generated/prisma
 nul
